# ros2_urdf_diff_drive

./: README.md
drive_bot_bringup/: CMakeLists.txt  package.xml
drive_bot_bringup/config/: nav2_params.yaml
drive_bot_bringup/launch/: drive_bot.launch.xml  drive_bot_navigation.launch.xml
drive_bot_bringup/maps/: drive_bot.pgm  drive_bot.yaml  new_map.yaml  waffle.yaml
drive_bot_description/: CMakeLists.txt  package.xml
drive_bot_description/launch/: display.launch.xml
drive_bot_description/rviz/: drive_bot.rviz
drive_bot_description/urdf/: common_properties.xacro  drive_bot.urdf.xacro  laser_sensor.xacro  mobile_base.xacro
drive_bot_description/worlds/: drive_bot.world  drive_bot_world.world
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml  navigation_launch.xml
my_robot_bringup/maps/: new_map.pgm
my_robot_controller/: CMakeLists.txt  package.xml
my_robot_controller/src/: controller.cpp  main.cpp
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: display.launch.xml
my_robot_description/rviz/: my_robot.rviz
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  imu_gazebo.xacro  imu_sensor.xacro  laser_sensor.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
my_robot_description/worlds/: my_world.world
my_robot_localization/: CMakeLists.txt  package.xml
my_robot_localization/include/my_robot_localization/: kalman_filter.h
my_robot_localization/src/: kalman_filter.cpp  kalman_filter_node.cpp
(+1 files in other folders)
